feat(coach): let coaches withdraw a pending cooperation invitation